# fastqc_to_json

./: .cruft.json  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  README.md  fastqc.json  pyproject.toml  requirements.txt  tox.ini
fastqc_to_json/: __main__.py  main.py  main2.py  main3.py
tests/test_data/: test.fastqc
tests/unit/: test_main.py
